# stash-vroom

./: .gitignore  CLAUDE.md  README.md  Stash-VRoom.yml  TODO.md  VRoom.yml  pyproject.toml  setup.cfg  stashPlugin.py
Documentation/: objects.inv  stash_vroom.heresphere.html  stash_vroom.jav.html  stash_vroom.util.html  user_guide.html
Documentation/_modules/stash_vroom/: slr.html  util.html
Documentation/_sources/: cookbook.rst.txt  stash_vroom.slr.rst.txt
VRoom/: README.md  build.js  package.json  settings.yml
VRoom/.github/workflows/: build.yml
VRoom/src/: index.jsx
doc/: .gitignore  Makefile  conf.py  cookbook.rst  design.rst  index.rst  user_guide.rst
docs/: .buildinfo  design.html  index.html  searchindex.js  stash_vroom.slr.html  user_guide.html
docs/_sources/: stash_vroom.heresphere.rst.txt  stash_vroom.util.rst.txt  user_guide.rst.txt
docs/doctrees/: cookbook.doctree  design.doctree  environment.pickle  index.doctree  stash_vroom.doctree  stash_vroom.heresphere.doctree  stash_vroom.jav.doctree  stash_vroom.slr.doctree  stash_vroom.util.doctree  user_guide.doctree
docs/html/: cookbook.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  stash_vroom.html  stash_vroom.jav.html  stash_vroom.util.html
docs/html/_modules/: index.html
docs/html/_modules/stash_vroom/: heresphere.html  jav.html  util.html
docs/html/_sources/: design.rst.txt  index.rst.txt  stash_vroom.jav.rst.txt  stash_vroom.rst.txt
js/: package-lock.json  package.json  plan.md  tsconfig.json
js/scripts/: bundle-browser.js
js/src/: index.ts  jav.ts  slr.ts  util.ts
js/tests/: jav.test.ts
plugin/: .gitignore  deps.py  hs_server.py  runner.py  start.py  util.py
plugin/log/: .gitignore
plugin/py/: deps.py  hs_server.py  runner.py  start.py
plugin/ui/: build-config.json  package-lock.json  package.json  settings.yml
plugin/ui/src/: PluginHome.jsx  PluginHome.tsx  gql.js  index.jsx  old-stash-vroom.js
plugin/ui/src/@types/: pluginApi.d.ts
plugin/ui/src/components/BlindInput/: BlindInput.css  BlindInput.jsx  EventEmitter.js  FeedbackPlayer.js  SequenceRecognizer.js  mappings.js
plugin/ui/static/: VRoom.html
stash-plugin/: continue.py  daemon.py  deps.py  pip.py  start.py
stash_heresphere/: hello.py
stash_plugin/: continue.py  start.py  stash_log.py
stash_plugin/js/: stash-vroom.js
stash_vroom/: __init__.py  changes.py  hello.py  heresphere.py  jav.py  queries.graphql  slr.py  stash.py  util.py
stash_vroom/cli/: ffmpeg.py
stash_vroom/cli/vroom/: __init__.py  filters_intro.md  help.md  intro_ui-urls.md  mutations_intro.md  schema_intro.md
stash_vroom/cli/vroom/intro/: discovery.md  filters.md  queries.md  ui-settings.md  ui-urls.md
stash_vroom/stash_client/: __init__.py  client.py  configuration.py  enums.py  fragments.py  images_by_ids.py  images_by_search.py  images_by_tag_ids.py  input_types.py  save_config.py  saved_filters.py  scene_ids.py  scenes.py  stash_boxes.py  tags_by_regex.py  version.py
tests/: .gitignore  tests_convert_ui_filter.py  tests_hello.py  tests_jav.py  tests_util.py
