[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Stash-VRoom"
version = "1.0.0"
description = "Stash VRoom"
authors = [
  {name = "Zyqu Onrel", email = "zyquonrel@gmail.com"}
]
readme = "README.md"
license = "Apache-2.0"
classifiers = []
dynamic = ["dependencies", "optional-dependencies", "requires-python", "scripts"]

[project.urls]
bugs = "https://github.com/zyquon/stash-vroom/issues"
homepage = "https://github.com/zyquon/stash-vroom"

[tool.ariadne-codegen]
remote_schema_url = "http://localhost:9999/graphql"
remote_schema_headers = {"ApiKey" = "$STASH_API_KEY"}
queries_path = "stash_vroom/queries.graphql"
target_package_name = "stash_client"
target_package_path = "stash_vroom"
client_name = "Stash"
convert_to_snake_case = false
async_client = false
