[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Stash-VRoom"
version = "1.0.0"
description = "HereSphere support for Stash and VR"
authors = [
  {name = "Zyqu Onrel", email = "zyquonrel@gmail.com"}
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask>=3.1.0",
    "httpx>=0.28.1",
    "Pillow>=11.0.0",
    "psygnal>=0.13.0",
    "pydantic>=2.11.7",
]

[project.optional-dependencies]
doc = [
    "sphinx>=4.0.0",
    "sphinx-autobuild",
]
dev = [
    "ariadne-codegen>=0.14.0",
    "pytest>=8.3",
]

[project.scripts]
ffmpeg-vroom = "stash_vroom.cli.ffmpeg:main"
vroom = "stash_vroom.cli.vroom:main"  # stash_vroom/cli/vroom/__init__.py

[project.urls]
bugs = "https://github.com/zyquon/stash-vroom/issues"
homepage = "https://github.com/zyquon/stash-vroom"

[tool.setuptools.packages.find]
exclude = ["tests*", "doc*", "plugin*"]

[tool.setuptools.package-data]
"stash_vroom.cli.vroom" = ["*.md", "intro/*.md"]

[tool.ariadne-codegen]
remote_schema_url = "http://localhost:9999/graphql"
remote_schema_headers = {"ApiKey" = "$STASH_API_KEY"}
queries_path = "stash_vroom/queries.graphql"
target_package_name = "stash_client"
target_package_path = "stash_vroom"
client_name = "Stash"
convert_to_snake_case = false
async_client = false