[metadata]
name = stash_vroom
version = 0.1.0
author = Zyquo Onrel
author_email = zyquo.onrel.example.com
description = HereSphere support for Stash and VR
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/stash-heresphere
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    flask
    stashapp-tools>=0.2.58

[options.extras_require]
docs =
    pytest>=8.3
    sphinx>=4.0.0
    sphinx-autobuild

[options.entry_points]
    console_scripts =
        vroom-ffmpeg = stash_vroom.cli.ffmpeg:main