[metadata]
name = stash_vroom
version = 0.1.0
author = Zyquo Onrel
author_email = zyquonrel@gmail.com
description = HereSphere support for Stash and VR
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zyquon/stash-vroom
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    flask>=3.1.0
    Pillow>=11.0.0
    psygnal>=0.13.0

[options.extras_require]
docs =
    sphinx>=4.0.0
    sphinx-autobuild
build =
    ariadne-codegen>=0.14.0
    pytest>=8.3


[options.entry_points]
console_scripts =
    vroom-ffmpeg = stash_vroom.cli.ffmpeg:main