[metadata]
name = stash_vroom
version = 0.1.0
author = Zyquo Onrel
author_email = zyquonrel@gmail.com
description = HereSphere support for Stash and VR
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zyquon/stash-vroom
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    flask>=3.1.0
    httpx>=0.28.1
    Pillow>=11.0.0
    psygnal>=0.13.0
    pydantic>=2.11.7

[options.extras_require]
doc =
    sphinx>=4.0.0
    sphinx-autobuild
dev =
    ariadne-codegen>=0.14.0
    pytest>=8.3
